Localized home and analytics

--- a/lib/localization/l10n/app_en.arb
+++ b/lib/localization/l10n/app_en.arb
@@ -5,6 +5,7 @@
   "profile": "Profile",
   "transactions": "Transactions",
   "transaction": "Transaction",
+  "expense": "Expense",
   "spentThisWeek": "Spent this week",
   "totalSpentThisWeek": "Total spent this week",
   "totalSpentThisMonth": "Total spent this month",
@@ -15,5 +16,26 @@
   "yesterday": "Yesterday",
   "entry": "Entry",
   "entries": "Entries",
-  "noRecentTransactions": "You have no recent transactions!"
+  "noRecentTransactions": "You have no recent transactions!",
+  "noTransactions": "No transactions to show!",
+  "cancel": "Cancel",
+  "save": "Save",
+  "addNote": "Add a note",
+  "category": "Category",
+  "categories": "Categories",
+  "chooseCategory": "Choose a category",
+  "sunday": "Su",
+  "monday": "Mo",
+  "tuesday": "Tu",
+  "wednesday": "We",
+  "thursday": "Th",
+  "friday": "Fr",
+  "saturday": "Sa",
+  "categoryFood": "Food & Drinks",
+  "categoryTransportation": "Transportation",
+  "categorySupplies": "Supplies",
+  "categoryHealthcare": "Healthcare",
+  "categoryPersonal": "Personal",
+  "categoryEducation": "Education",
+  "categoryIncome": "Income"
 }
