--- a/lib/localization/l10n/app_fr.arb
+++ b/lib/localization/l10n/app_fr.arb
@@ -1,3 +1,41 @@
 {
-    "spentThisWeek" : "Investi cette semaine"
+  "home": "Accueil",
+  "analytics": "Analytiques",
+  "budget": "Budget",
+  "profile": "Profil",
+  "transactions": "Transactions",
+  "transaction": "Transaction",
+  "expense": "Dépense",
+  "spentThisWeek": "Dépensé cette semaine",
+  "totalSpentThisWeek": "Total dépensé cette semaine",
+  "totalSpentThisMonth": "Total dépensé ce mois-ci",
+  "week": "Semaine",
+  "month": "Mois",
+  "viewAllTransactions": "Voir toutes les transactions",
+  "today": "Aujourd'hui",
+  "yesterday": "Hier",
+  "entry": "Entrée",
+  "entries": "Entrées",
+  "noRecentTransactions": "Vous n'avez pas de transactions récentes !",
+  "noTransactions": "Aucune transaction à afficher !",
+  "cancel": "Annuler",
+  "save": "Sauvegarder",
+  "addNote": "Ajouter une note",
+  "category": "Catégorie",
+  "categories": "Catégories",
+  "chooseCategory": "Choisissez une catégorie",
+  "sunday": "Di",
+  "monday": "Lu",
+  "tuesday": "Ma",
+  "wednesday": "Me",
+  "thursday": "Je",
+  "friday": "Ve",
+  "saturday": "Sa",
+  "categoryFood": "Nourriture et Boissons",
+  "categoryTransportation": "Transport",
+  "categorySupplies": "Fournitures",
+  "categoryHealthcare": "Santé",
+  "categoryPersonal": "Personnel",
+  "categoryEducation": "Éducation",
+  "categoryIncome": "Revenu"
 }
