--- a/lib/localization/l10n/app_en.arb
+++ b/lib/localization/l10n/app_en.arb
@@ -9,7 +9,9 @@
   "expense": "Expense",
   "spentThisWeek": "Spent this week",
   "totalSpentThisWeek": "Total spent this week",
+  "totalSpentLastWeek": "Total spent last week",
   "totalSpentThisMonth": "Total spent this month",
+  "totalSpentLastMonth": "Total spent last month",
   "week": "Week",
   "month": "Month",
   "viewAllTransactions": "View all transactions",
