--- a/lib/localization/l10n/app_fr.arb
+++ b/lib/localization/l10n/app_fr.arb
@@ -9,7 +9,9 @@
   "expense": "Dépense",
   "spentThisWeek": "Dépensé cette semaine",
   "totalSpentThisWeek": "Total dépensé cette semaine",
+  "totalSpentLastWeek": "Total dépénsé la semaine dernière",
   "totalSpentThisMonth": "Total dépensé ce mois-ci",
+  "totalSpentLastMonth": "Total dépensé le mois denier",
   "week": "Semaine",
   "month": "Mois",
   "viewAllTransactions": "Voir toutes les transactions",
