groupe transaction by date

--- a/lib/localization/l10n/app_en.arb
+++ b/lib/localization/l10n/app_en.arb
@@ -34,7 +34,7 @@
   "thursday": "Th",
   "friday": "Fr",
   "saturday": "Sa",
-  "categoryFood": "Food & Drinks",
+  "categoryFood": "Food",
   "categoryTransportation": "Transportation",
   "categorySupplies": "Supplies",
   "categoryHealthcare": "Healthcare",
