--- a/lib/localization/l10n/app_fr.arb
+++ b/lib/localization/l10n/app_fr.arb
@@ -34,7 +34,7 @@
   "thursday": "Je",
   "friday": "Ve",
   "saturday": "Sa",
-  "categoryFood": "Nourriture et Boissons",
+  "categoryFood": "Nourriture",
   "categoryTransportation": "Transport",
   "categorySupplies": "Fournitures",
   "categoryHealthcare": "Santé",
