--- a/lib/localization/l10n/app_en.arb
+++ b/lib/localization/l10n/app_en.arb
@@ -3,7 +3,7 @@
   "home": "Home",
   "analytics": "Analytics",
   "budget": "Budget",
-  "profile": "Profile",
+  "more": "More",
   "transactions": "Transactions",
   "transaction": "Transaction",
   "expense": "Expense",
