--- a/lib/localization/l10n/app_fr.arb
+++ b/lib/localization/l10n/app_fr.arb
@@ -3,7 +3,7 @@
   "home": "Accueil",
   "analytics": "Analytiques",
   "budget": "Budget",
-  "profile": "Profil",
+  "more": "Plus",
   "transactions": "Transactions",
   "transaction": "Transaction",
   "expense": "Dépense",
